deploy/kubernetes/overlays/prod/biller-experience-api-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ic-biller-experience-api
spec:
  selector:
    $patch: replace
    app.kubernetes.io/name: ic-biller-experience-api
